--- a/spring-boot-server/pom.xml
+++ b/spring-boot-server/pom.xml
@@ -38,6 +38,11 @@
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib-jdk8</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.github.doyaaaaaken</groupId>
+			<artifactId>kotlin-csv-jvm</artifactId>
+			<version>0.15.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
