--- a/spring-boot-server/src/main/resources/application.properties
+++ b/spring-boot-server/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=2717
-spring.data.mongodb.database=kyc
+spring.data.mongodb.uri=mongodb://localhost:27017/kyc
+server.port=8081
