--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
         networks: 
             - app-net
     spring-boot:
-        image: kyc-csv-processor_spring-boot
+        build: ./spring-boot-server
         ports: 
-            - 8080:8080
+            - 8081:8080
         depends_on: 
             - mongo
         networks: 
